@@ -1,5 +1,11 @@
 * What is new in gsl-2.2:
 
+** optimized lmniel nonlinear least squares solver
+   (bug #46369)
+
+** added gsl_multilarge_linear_lcurve() to compute
+   the L-curve for large linear systems
+
 ** updated multilarge normal equations method to use
    new Cholesky scaling for better numerical stability
 
